--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -1,118 +1,7 @@
 {% extends "layout/BaseLayout.html" %}
 {% load static %}
 {% block navigation %}
-    <nav class="toggle-sidebar" id="right-sidebar-toggle">
-        <div class="nano">
-            <div class="nano-content">
-                <div>
-                    <ul class="list-inline nav-tab-card clearfix" role="tablist">
-                        <li class="active" role="presentation">
-                            <a aria-controls="friends" data-toggle="tab" href="#friends" role="tab">Friends</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="friends" role="tabcard">
-                            <ul class="list-unstyled sidebar-contact-list">
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span>
-                                        <span class="float-left">
-                                <img src='{% static "images/avtar-2.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>John Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span> <span
-                                            class="float-left">
-                              <img src='{% static "images/avtar-1.png" %}' class="media-box-object rounded-circle"
-                                   width="50"></span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Govinda Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-danger circle-lg"></span></span> <span
-                                            class="float-left">
-                                <img src='{% static "images/avtar-3.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Megan Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span> <span
-                                            class="float-left">
-                               <img src='{% static "images/avtar-4.png" %}' class="media-box-object rounded-circle"
-                                    width="50">
-                             </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Hritik Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span> <span
-                                            class="float-left">
-                                <img src='{% static "images/avtar-5.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Bianca Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span> <span
-                                            class="float-left">
-                                <img src='{% static "images/avtar-6.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>John Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-success circle-lg"></span></span> <span
-                                            class="float-left">
-                                <img src='{% static "images/avtar-1.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Govinda Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li class="clearfix">
-                                    <a class="media-box" href="#"><span class="float-right"><span
-                                            class="circle circle-danger circle-lg"></span></span> <span
-                                            class="float-left">
-                                <img src='{% static "images/avtar-2.png" %}' class="media-box-object rounded-circle"
-                                     width="50">
-                              </span>
-                                        <span class="media-box-body"><span
-                                                class="media-box-heading"><strong>Megan Doe</strong><br>
-                              <small class="text-muted">Designer</small></span></span></a>
-                                </li>
-                                <li>
-                                    <div class=" text-center">
-                                        <a class="btn btn-teal" href="javascript:void(0);" title="See more contacts">Load
-                                            more..</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+
     <!-- ============================================================== -->
     <!--                        Right Side End                          -->
     <!-- ============================================================== -->
@@ -139,17 +28,22 @@
                                                 class="nav-link">Becoming A White Label Partner</a></li>
                     {% endif %}
 
-                       <li class="nav-item"><a href="{% url "whitelabelpartnerportal:wholesales" %}" class="nav-link">Wholesale Packages</a></li>
-                       <li class="nav-item"><a href="{% url "whitelabelpartnerportal:clients-on-wholesale" %}" class="nav-link">Clients That Are On Your Wholesale Package</a></li>
-                       <!--<li class="nav-item"><a href="{% url "whitelabelpartnerportal:partner_resources" %}" class="nav-link">Partner Resources</a></li> -->
+                    <li class="nav-item"><a href="{% url "whitelabelpartnerportal:wholesales" %}" class="nav-link">Wholesale
+                        Packages</a></li>
+                    <li class="nav-item"><a href="{% url "whitelabelpartnerportal:clients-on-wholesale" %}"
+                                            class="nav-link">Clients That Are On Your Wholesale Package</a></li>
+                    <!--<li class="nav-item"><a href="{% url "whitelabelpartnerportal:partner_resources" %}" class="nav-link">Partner Resources</a></li> -->
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:marketingroi' %}" class="nav-link">Your
                         Marketing Return On Investment</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:whitelabeltraining' %}"
                                             class="nav-link">White Label Training</a></li>
-                {% if dynamic.is_paid_for_whitelabel %}
-                    <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:myresiduals' %}" class="nav-link">My
-                        Residuals</a></li>
-                {% endif %}
+                    {% if dynamic.is_paid_for_whitelabel %}
+                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:myresiduals' %}" class="nav-link">My
+                            Residuals</a></li>
+                    {% endif %}
+                    {% if dynamic.is_paid_for_whitelabel %}
+                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:clientProgress' %}" class="nav-link">Client Progress</a></li>
+                    {% endif %}
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enternewleads' %}" class="nav-link">Enter
                         New Leads</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:leadoverview' %}" class="nav-link">Lead
