--- a/business/templates/BusinessCreditBuilderTracker/BusinessCreditBuilderTracker.html
+++ b/business/templates/BusinessCreditBuilderTracker/BusinessCreditBuilderTracker.html
@@ -107,7 +107,55 @@
                 </div>
             </div>
         </div>
-
+       <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-default">
+                        Non Reporting Tradelines
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                                <thead>
+                                <tr>
+                                    <th>Business Name</th>
+                                    <th>Product</th>
+                                    <th>Amount</th>
+                                    <th>Tradeline Credit Amount</th>
+                                    <th>Where Business Tradelines Report To</th>
+                                    <th>Terms</th>
+                                    <th>Description</th>
+                                    <th>Link</th>
+                                    <th>Add Tradeline</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for tradeline in nonreporting %}
+                                    <tr>
+                                        <td>{{ tradeline.company_name }}</td>
+                                        <td>{{ tradeline.product }}</td>
+                                        <td>${{ tradeline.price }}</td>
+                                        <td>${{ tradeline.tradeline_credit_amount }}</td>
+                                        <td>{{ tradeline.reports_to }}</td>
+                                        <td>{{ tradeline.terms}}</td>
+                                        <td>{{ tradeline.description }}</td>
+                                        <td>{% if tradeline.website_link %} <a class="btn btn-primary" target="_blank" href="{{tradeline.website_link }}">View</a>{% endif %}</td>
+                                        <td>
+                                            <form method="post">{% csrf_token %}
+                                                <input type="hidden" name="tradeline" value="{{ tradeline.id }}">
+                                                <input type="hidden" name="tier" value="tier5">
+                                                <button class="btn btn-primary">Add Tradeline</button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-12">
@@ -142,7 +190,7 @@
                                     <tr>
                                         <td>{{ tradeline.company_name }}</td>
                                         <td>{{ tradeline.product }}</td>
-                                        <td>${{ tradeline.tradeline_amount }}</td>
+                                        <td>${{ tradeline.price }}</td>
                                         <td>${{ tradeline.tradeline_credit_amount }}</td>
                                         <td>{{ tradeline.reports_to }}</td>
                                         <td>{{ tradeline.terms}}</td>
@@ -166,6 +214,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
@@ -199,7 +249,7 @@
                                     <tr>
                                         <td>{{ tradeline.company_name }}</td>
                                         <td>{{ tradeline.product }}</td>
-                                        <td>{{ tradeline.tradeline_amount }}</td>
+                                        <td>{{ tradeline.price }}</td>
                                         <td>{{ tradeline.tradeline_credit_amount }}</td>
                                         <td>{{ tradeline.reports_to }}</td>
                                     <td>{{ tradeline.terms}}</td>
@@ -262,7 +312,7 @@
                                     <tr>
                                         <td>{{ tradeline.company_name }}</td>
                                         <td>{{ tradeline.product }}</td>
-                                        <td>{{ tradeline.tradeline_amount }}</td>
+                                        <td>{{ tradeline.price }}</td>
                                         <td>{{ tradeline.tradeline_credit_amount }}</td>
                                         <td>{{ tradeline.reports_to }}</td>
                                     <td>{{ tradeline.terms}}</td>
@@ -323,7 +373,7 @@
                                     <tr>
                                         <td>{{ tradeline.company_name }}</td>
                                         <td>{{ tradeline.product }}</td>
-                                        <td>{{ tradeline.tradeline_amount }}</td>
+                                        <td>{{ tradeline.price }}</td>
                                         <td>{{ tradeline.tradeline_credit_amount }}</td>
                                         <td>{{ tradeline.reports_to }}</td>
                                         <td>{{ tradeline.terms}}</td>
