--- a/whitelabelpartnerportal/templates/PortalManagement/EditWholesalee.html
+++ b/whitelabelpartnerportal/templates/PortalManagement/EditWholesalee.html
@@ -25,7 +25,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-default">
-                        Edit tradeline
+                        Edit wholesales
                     </div>
                     <div class="card-body">
                         <table class="table table-striped dt-responsive nowrap">
@@ -33,22 +33,26 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Price</th>
+                                <th>Fee</th>
                                 <th>Apply</th>
+
                             </tr>
                             </thead>
 
                             <tbody>
                             <tr>
                                 <form method="post">{% csrf_token %}
-
-
-                                    <td>{{ userstep.name }}</td>
-
+                                    <td>{{ tradeline.name }}</td>
                                     <td>
-                                        $<input name="price" value="{{ userstep.price }}" type="number" step="0.01">
+                                        $<input name="price" value="{{ tradeline.price }}" type="number" step="0.01"
+                                                min="0">
                                     </td>
                                     <td>
-                                        <input name="product" value="{{ userstep.product_id }}" type="hidden">
+                                        $<input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01"
+                                                min="0">
+                                    </td>
+                                    <td>
+                                        <input name="product" value="{{ tradeline.product_id }}" type="hidden">
                                         <button class="btn btn-sm btn-primary">Apply</button>
                                     </td>
                                 </form>
