--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -101,8 +101,8 @@
                                         <li><a class="nav-link" href="/about-us">Our Story</a>
                                         </li>
                                         <br>
-                                        <li><a class="nav-link" href="/testimonial">Testimonials</a>
-                                        </li>
+                                    <!--    <li><a class="nav-link" href="/testimonial">Testimonials</a>
+                                        </li> -->
                                         </li>
                                     </ul>
                                 </li>
