--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -376,7 +376,7 @@
         {% endif %}
         <!--about end-->
 
-        <section class="pos-r pt-0">
+      <!--  <section class="pos-r pt-0">
             <div class="hexagon-bg style-2">
                 <div class="hexagon"></div>
                 <div class="hexagon"></div>
@@ -399,11 +399,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--testimonial style-1 start-->
 
-        <section class="p-0 pos-r" data-bg-img="/static/images/pattern/03.png">
+    <!--    <section class="p-0 pos-r" data-bg-img="/static/images/pattern/03.png">
             <div class="container">
                 <div class="row custom-mt-10">
                     <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd">
@@ -425,7 +425,7 @@
                     <!--    <iframe width="100%" height="250" src="https://www.youtube.com/embed/OdqsT5r9N7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     <!--</div>-->
                     <!--     </div>-->
-                    <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd">
+                  <!--  <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd">
                         <div class="video-box">
                             <img class="img-fluid" src="/static/images/testimonial/test2.png" alt="">
                             <div class="video-btn video-btn-pos"><a class="play-btn popup-youtube"
@@ -444,7 +444,7 @@
                     <!--    <iframe width="100%" height="250" src="https://www.youtube.com/embed/f39zGQMMbA0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     <!--</div>-->
                     <!--     </div>-->
-                    <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
+              <!--      <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
                         <div class="video-box">
                             <img class="img-fluid" src="/static/images/testimonial/test3.png" alt="">
                             <div class="video-btn video-btn-pos"><a class="play-btn popup-youtube"
@@ -463,7 +463,7 @@
                     <!--    <iframe width="100%" height="250" src="https://www.youtube.com/embed/yRHg-oIjbdI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     <!--</div>-->
                     <!--     </div>-->
-                    <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
+                  <!--  <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
                         <div class="video-box">
                             <img class="img-fluid" src="/static/images/testimonial/test4.png" alt="">
                             <div class="video-btn video-btn-pos"><a class="play-btn popup-youtube"
@@ -482,7 +482,7 @@
                     <!--    <iframe width="100%" height="250" src="https://www.youtube.com/embed/rgh1TupF6WM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     <!--</div>-->
                     <!--     </div>-->
-                    <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
+                  <!--  <div class="col-lg-6 col-md-6 ml-auto mr-auto my-btn-in-desktopd" style="margin-top: 30px;">
                         <div class="video-box">
                             <img class="img-fluid" src="/static/images/testimonial/test5.png" alt="">
                             <div class="video-btn video-btn-pos"><a class="play-btn popup-youtube"
@@ -632,7 +632,7 @@
 
                 </div>
             </div>
-        </section>
+       </section> -->
 
 
         <section class="pos-r">
