--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -10,8 +10,8 @@
 
     <style media="screen">
 
-        img {
-            height: 150px;
+        .image {
+            width: 100%;
         }
 
         .bgcolor {
